Basic buttons and functionality added
button1,
button2,

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 LB_InputManager/Temp/UnityLockfile
+LB_InputManager/Library/assetDatabase3
+LB_InputManager/Library/assetDatabase3
+*.lock
